Fix accidental hidden overflow issue

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
     gap: 0;
     min-height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    overflow: scroll;
     background: #EAEDF0;
     color: #3e4041;
 }
